--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -525,9 +525,9 @@
 3061106: Potato Knight's Willpower VI
 # Alphecca
 1062101: Skruostre
-1062102: Kongens Ansva
-1062103: Helig Franmerai
-1062104: Kongens Ansva+
+1062102: Kungens Ansvar
+1062103: Helig Flammerai
+1062104: Kungens Ansvar+
 2062101: White Knight's Visit
 2062102: White Knight's Visit+
 2062103: White Knight's Visit++
