--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -537,4 +537,17 @@
 3062104: King Knight's Ambition IV
 3062105: King Knight's Ambition V
 3062106: King Knight's Ambition VI
-
+# Suhail
+1062101: Murchison Meteo
+1062102: Giant Impact
+1062103: Brachium Ex Machina
+1062104: Murchison Meteo+
+2062101: Pirate Style Robbery
+2062102: Pirate Style Robbery+
+2062103: Pirate Style Robbery++
+3062101: Captain of The Best Spear I
+3062102: Captain of The Best Spear II
+3062103: Captain of The Best Spear III
+3062104: Captain of The Best Spear IV
+3062105: Captain of The Best Spear V
+3062106: Captain of The Best Spear VI
