Update Skillnametranslation [ci skip]

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -231,6 +231,10 @@
 3026104: Situational Awareness IV
 3026105: Situational Awareness V
 3026106: Situational Awareness VI
+1062101: Repida Stereosis
+1062102: Sféra Katadíki̱
+1062103: Mávro Áspro
+1062104: Mávro Áspro+
 # Toushuu
 1013101: Art of Decapitation
 1013102: Great Comet Slash
@@ -551,3 +555,32 @@
 3030104: Captain of The Best Spear IV
 3030105: Captain of The Best Spear V
 3030106: Captain of The Best Spear VI
+# Kalaski
+1064101: Cutting Edge
+1064102: Burst Shot
+1064103: On-frame Resident
+1064104: Cutting Edge+
+2064101: Hero Photograph
+2064102: Hero Photograph+
+2064103: Hero Photograph++
+3064101: Auto Focus I
+3064102: Auto Focus II
+3064103: Auto Focus III
+3064104: Auto Focus IV
+3064105: Auto Focus V
+3064106: Auto Focus VI
+# Shaft
+1063101: Go Straight
+1063102: Technical Driving
+1063103: Road to Tryline
+1063104: Technical Driving+
+2063101: Course Guidance
+2063102: Course Guidance+
+2063103: Course Guidance++
+3063101: Carrier of Fortune I
+3063102: Carrier of Fortune II
+3063103: Carrier of Fortune III
+3063104: Carrier of Fortune IV
+3063105: Carrier of Fortune V
+3063106: Carrier of Fortune VI
+
