--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -231,7 +231,7 @@
 3026104: Situational Awareness IV
 3026105: Situational Awareness V
 3026106: Situational Awareness VI
-1026201: Repida Stereosis
+1026201: Lepída Steréosis
 1026202: Sféra Katadíki̱
 1026203: Mávro Áspro
 1026204: Mávro Áspro+
@@ -364,8 +364,8 @@
 # Gomeisa
 1033101: Dance of High Winds
 1033102: Dance of the Sun
-1033103: Dansaque Traepas 
-1033104: Dansaque Traepas+
+1033103: Danza que Trae paz
+1033104: Danza que Trae paz+
 2033101: Blessing of Greenery
 2033102: Blessing of Greenery+
 2033103: Blessing of Greenery++
@@ -528,9 +528,9 @@
 3061105: Potato Knight's Willpower V
 3061106: Potato Knight's Willpower VI
 # Alphecca
-1062101: Skruostre
+1062101: Skråstreg
 1062102: Kungens Ansvar
-1062103: Helig Flammerai
+1062103: Helig Flammerei
 1062104: Kungens Ansvar+
 2062101: White Knight's Visit
 2062102: White Knight's Visit+
