--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -583,4 +583,42 @@
 3063104: Carrier of Fortune IV
 3063105: Carrier of Fortune V
 3063106: Carrier of Fortune VI
+# Melide
+2071101: Good Luck Charm
+2071102: Good Luck Charm+
+2071103: Good Luck Charm++
+3071101: Fighting Witch I
+3071102: Fighting Witch II
+3071103: Fighting Witch III
+3071104: Fighting Witch IV
+3071105: Fighting Witch V
+3071106: Fighting Witch VI
+# Yoshiori
+1072101: Invisible Attack
+1072102: Stealth Marking
+1072103: Operation Regain
+1072104: Invisible Attack+
+2072101: Invisible Ambush
+2072102: Invisible Ambush+
+2072103: Invisible Ambush++
+3072101: Mercenary on the Verge of Death I
+3072102: Mercenary on the Verge of Death II
+3072103: Mercenary on the Verge of Death III
+3072104: Mercenary on the Verge of Death IV
+3072105: Mercenary on the Verge of Death V
+3072106: Mercenary on the Verge of Death VI
+# Monomasa
+1031101: Kynigó Sylléktis
+1031102: Proteïkós Soma
+1031103: Téras Prodosía
+1031104: Téras Prodosía+
+2031101: Kaibutsu Hunt
+2031102: Kaibutsu Hunt+
+2031103: Kaibutsu Hunt++
+3031101: Amorphous Form I
+3031102: Amorphous Form II
+3031103: Amorphous Form III
+3031104: Amorphous Form IV
+3031105: Amorphous Form V
+3031106: Amorphous Form VI
 
