--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -609,7 +609,7 @@
 3072106: Mercenary on the Verge of Death VI
 # Monomasa
 1031101: Kynigó Sylléktis
-1031102: Proteïkós Soma
+1031102: Proteïkós Sóma
 1031103: Téras Prodosía
 1031104: Téras Prodosía+
 2031101: Kaibutsu Hunt
