--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -1,102 +1,160 @@
 "1":
-  name: ATK Up
+  name:
+  isGoodStatus: 1
   icon: "status_atkup"
 "2":
-  name: DEF Up
+  name:
+  isGoodStatus: 1
   icon: "status_defup"
 "3":
-  name: SPD UP
+  name:
+  isGoodStatus: 1
   icon: "status_agiup"
 "4":
-  name: Attention
+  name:
+  isGoodStatus: 1
   icon: "status_attention"
 "5":
-  name: taunt
+  name:
+  isGoodStatus: 1
   icon: "status_provocation"
 "6":
-  name: Invincible
+  name:
+  isGoodStatus: 1
   icon: "status_invincible"
 "7":
-  name: Good Luck
+  name:
+  isGoodStatus: 1
   icon: "status_lucky"
 "8":
-  name: Awakening
+  name:
+  isGoodStatus: 1
   icon: "status_awakening"
 "9":
-  name: Resurrection
+  name:
+  isGoodStatus: 1
   icon: "status_reincanate"
 "10":
-  name: Regenerate
+  name:
+  isGoodStatus: 1
   icon: "status_regenerate"
 "11":
-  name: ATK Down
+  name:
+  isGoodStatus: 0
   icon: "status_atkdown"
 "12":
-  name: DEF Down
+  name:
+  isGoodStatus: 0
   icon: "status_defdown"
 "13":
-  name: SPD Down
+  name:
+  isGoodStatus: 0
   icon: "status_agidown"
 "14":
-  name: Special
+  name:
+  isGoodStatus: 0
   icon: "status_mosaic"
 "15":
-  name: Hide
+  name:
+  isGoodStatus: 1
   icon: "status_hide"
 "16":
-  name: Misfortune
+  name:
+  isGoodStatus: 0
   icon: "status_unlucky"
 "17":
-  name: Overconsume
+  name:
+  isGoodStatus: 0
   icon: "status_useless"
 "18":
-  name: Poison
+  name:
+  isGoodStatus: 0
   icon: "status_poison"
 "19":
-  name: Burn
+  name:
+  isGoodStatus: 0
   icon: "status_flame"
 "20":
-  name: Super SPD UP
+  name:
+  isGoodStatus: 1
   icon: "status_superagiup"
 "21":
-  name: Immunity
+  name:
+  isGoodStatus: 1
   icon: "status_immunity"
 "22":
-  name: Silence
+  name:
+  isGoodStatus: 0
   icon: "status_silence"
 "23":
   name:
+  isGoodStatus: 1
   icon: "status_firepower"
 "24":
-  name: Wait
+  name:
+  isGoodStatus: 1
   icon: "b_skill_wait"
 "25":
-  name: Super SPD Attack
+  name:
+  isGoodStatus: 1
   icon: "status_speedatk"
 "26":
-  name: Damage Aggregation
+  name:
+  isGoodStatus: 1
   icon: "status_damageAggregation"
 "27":
   name:
+  isGoodStatus: 1
   icon: "b_skill_special"
 "28":
   name:
+  isGoodStatus: 1
   icon: "b_skill_special"
 "29":
   name:
+  isGoodStatus: 0
   icon: "status_superagidown"
 "30":
   name:
+  isGoodStatus: 1
   icon: ""
 "31":
   name:
+  isGoodStatus: 1
   icon: ""
 "32":
   name:
+  isGoodStatus: 1
   icon: ""
 "33":
   name:
+  isGoodStatus: 1
   icon: ""
 "34":
-  name: Burst
+  name:
+  isGoodStatus: 0
+  icon: "status_burst"
+"35":
+  name:
+  isGoodStatus: 1
+  icon: "b_skill_special"
+"36":
+  name:
+  isGoodStatus: 1
+  icon: "status_burst"
+"37":
+  name:
+  isGoodStatus: 1
+  icon: "status_burst"
+"38":
+  name:
+  isGoodStatus: 1
+  icon: "status_burst"
+"39":
+  name:
+  isGoodStatus: 0
+  icon: "status_burst"
+"40":
+  name:
+  isGoodStatus: 0
   icon: "status_burst"
