--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -158,3 +158,11 @@
   name:
   isGoodStatus: 0
   icon: "status_burst"
+"41":
+  name:
+  isGoodStatus: 0
+  icon: ""
+"42":
+  name:
+  isGoodStatus: 1
+  icon: "b_skill_special"
