--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -1,5 +1,5 @@
 "1":
-  name:
+  name: "Attack Up"
   isGoodStatus: 1
   icon: "status_atkup"
 "2":
@@ -166,3 +166,19 @@
   name:
   isGoodStatus: 1
   icon: "b_skill_special"
+"43":
+  name:
+  isGoodStatus: 1
+  icon: ""
+"44":
+  name:
+  isGoodStatus: 1
+  icon: ""
+"45":
+  name:
+  isGoodStatus: 1
+  icon: ""
+"46":
+  name: "Debuff Resistance 100"
+  isGoodStatus: 1
+  icon: "status_immunity"
