Add description field

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -1,184 +1,230 @@
 "1":
   name: "Attack Up"
+  description:
   isGoodStatus: 1
   icon: "status_atkup"
 "2":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_defup"
 "3":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_agiup"
 "4":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_attention"
 "5":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_provocation"
 "6":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_invincible"
 "7":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_lucky"
 "8":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_awakening"
 "9":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_reincanate"
 "10":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_regenerate"
 "11":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_atkdown"
 "12":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_defdown"
 "13":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_agidown"
 "14":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_mosaic"
 "15":
-  name:
+  name: "Hide"
+  description:
   isGoodStatus: 1
   icon: "status_hide"
 "16":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_unlucky"
 "17":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_useless"
 "18":
-  name:
+  name: "Poison"
+  description:
   isGoodStatus: 0
   icon: "status_poison"
 "19":
-  name:
+  name: "Burn"
+  description:
   isGoodStatus: 0
   icon: "status_flame"
 "20":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_superagiup"
 "21":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_immunity"
 "22":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_silence"
 "23":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_firepower"
 "24":
   name:
+  description:
   isGoodStatus: 1
   icon: "b_skill_wait"
 "25":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_speedatk"
 "26":
-  name:
+  name: "Damage aggregation"
+  description:
   isGoodStatus: 1
   icon: "status_damageAggregation"
 "27":
   name:
+  description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "28":
   name:
+  description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "29":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_superagidown"
 "30":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "31":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "32":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "33":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "34":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_burst"
 "35":
-  name:
+  name: "Tentacle"
+  description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "36":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_burst"
 "37":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_burst"
 "38":
   name:
+  description:
   isGoodStatus: 1
   icon: "status_burst"
 "39":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_burst"
 "40":
   name:
+  description:
   isGoodStatus: 0
   icon: "status_burst"
 "41":
   name:
+  description:
   isGoodStatus: 0
   icon: ""
 "42":
   name:
+  description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "43":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "44":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "45":
   name:
+  description:
   isGoodStatus: 1
   icon: ""
 "46":
   name: "Debuff Resistance 100"
+  description:
   isGoodStatus: 1
   icon: "status_immunity"
