--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -4,67 +4,67 @@
   isGoodStatus: 1
   icon: "status_atkup"
 "2":
-  name:
+  name: "Defense Up"
   description:
   isGoodStatus: 1
   icon: "status_defup"
 "3":
-  name:
+  name: "Speed Up"
   description:
   isGoodStatus: 1
   icon: "status_agiup"
 "4":
-  name:
+  name: "Attention"
   description:
   isGoodStatus: 1
   icon: "status_attention"
 "5":
-  name:
+  name: "Provocation"
   description:
   isGoodStatus: 1
   icon: "status_provocation"
 "6":
-  name:
+  name: "Invincible"
   description:
   isGoodStatus: 1
   icon: "status_invincible"
 "7":
-  name:
+  name: "Good Luck"
   description:
   isGoodStatus: 1
   icon: "status_lucky"
 "8":
-  name:
+  name: "Awakening"
   description:
   isGoodStatus: 1
   icon: "status_awakening"
 "9":
-  name:
+  name: "Resurrection"
   description:
   isGoodStatus: 1
   icon: "status_reincanate"
 "10":
-  name:
+  name: "Regen"
   description:
   isGoodStatus: 1
   icon: "status_regenerate"
 "11":
-  name:
+  name: "Attack Down"
   description:
   isGoodStatus: 0
   icon: "status_atkdown"
 "12":
-  name:
+  name: "Defense Down"
   description:
   isGoodStatus: 0
   icon: "status_defdown"
 "13":
-  name:
+  name: "Speed Down"
   description:
   isGoodStatus: 0
   icon: "status_agidown"
 "14":
-  name:
+  name: "Mosaic"
   description:
   isGoodStatus: 0
   icon: "status_mosaic"
@@ -74,12 +74,12 @@
   isGoodStatus: 1
   icon: "status_hide"
 "16":
-  name:
+  name: "Bad Luck"
   description:
   isGoodStatus: 0
   icon: "status_unlucky"
 "17":
-  name:
+  name: "Over-consumption"
   description:
   isGoodStatus: 0
   icon: "status_useless"
@@ -94,32 +94,32 @@
   isGoodStatus: 0
   icon: "status_flame"
 "20":
-  name:
+  name: "Super Speed Up"
   description:
   isGoodStatus: 1
   icon: "status_superagiup"
 "21":
-  name:
+  name: "Debuff Immunity"
   description:
   isGoodStatus: 1
   icon: "status_immunity"
 "22":
-  name:
+  name: "Silence"
   description:
   isGoodStatus: 0
   icon: "status_silence"
 "23":
-  name:
+  name: "Burning Power"
   description:
   isGoodStatus: 1
   icon: "status_firepower"
 "24":
-  name:
+  name: "Wait"
   description:
   isGoodStatus: 1
   icon: "b_skill_wait"
 "25":
-  name:
+  name: "Agile"
   description:
   isGoodStatus: 1
   icon: "status_speedatk"
@@ -129,42 +129,42 @@
   isGoodStatus: 1
   icon: "status_damageAggregation"
 "27":
-  name:
+  name: "Persistent Effect"
   description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "28":
-  name:
+  name: "Event Bonus"
   description:
   isGoodStatus: 1
   icon: "b_skill_special"
 "29":
-  name:
+  name: "Super Speed Down"
   description:
   isGoodStatus: 0
   icon: "status_superagidown"
 "30":
-  name:
+  name: "Item Effect"
   description:
   isGoodStatus: 1
   icon: ""
 "31":
-  name:
+  name: "Item Effect: HP Up"
   description:
   isGoodStatus: 1
   icon: ""
 "32":
-  name:
+  name: "Item Effect: Atk Up"
   description:
   isGoodStatus: 1
   icon: ""
 "33":
-  name:
+  name: "Item Effect: Damage Reduction"
   description:
   isGoodStatus: 1
   icon: ""
 "34":
-  name:
+  name: "Burst"
   description:
   isGoodStatus: 0
   icon: "status_burst"
@@ -174,36 +174,36 @@
   isGoodStatus: 1
   icon: "b_skill_special"
 "36":
-  name:
+  name: "View Cost -3000"
   description:
   isGoodStatus: 1
   icon: "status_burst"
 "37":
-  name:
+  name: "Bonus: Atk Up"
   description:
   isGoodStatus: 1
   icon: "status_burst"
 "38":
-  name:
+  name: "View Cost -2000"
   description:
   isGoodStatus: 1
   icon: "status_burst"
 "39":
-  name:
+  name: "View Cost +4000"
   description:
   isGoodStatus: 0
   icon: "status_burst"
 "40":
-  name:
+  name: "Behavioural Suspension"
   description:
   isGoodStatus: 0
   icon: "status_burst"
 "41":
-  name:
+  name: "Attack Up (Small)"
   description:
   isGoodStatus: 0
   icon: ""
-"42":
+"42": 
   name:
   description:
   isGoodStatus: 1
@@ -214,17 +214,17 @@
   isGoodStatus: 1
   icon: ""
 "44":
-  name:
+  name: "Debuff Resistance 100%"
   description:
   isGoodStatus: 1
-  icon: ""
+  icon: "status_immunity"
 "45":
   name:
   description:
   isGoodStatus: 1
   icon: ""
 "46":
-  name: "Debuff Resistance 100"
+  name: "Debuff Resistance 100%"
   description:
   isGoodStatus: 1
   icon: "status_immunity"
