--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -1,206 +1,206 @@
 "1":
   name: "Attack Up"
-  description:
+  description: "Multiply attack power by 1.5"
   isGoodStatus: 1
   icon: "status_atkup"
 "2":
   name: "Defense Up"
-  description:
+  description: "For one hit, damage from opponent is halved"
   isGoodStatus: 1
   icon: "status_defup"
 "3":
   name: "Speed Up"
-  description:
+  description: "Increase Speed by 10"
   isGoodStatus: 1
   icon: "status_agiup"
 "4":
   name: "Attention"
-  description:
+  description: "Multiply own view status by 1.5"
   isGoodStatus: 1
   icon: "status_attention"
 "5":
   name: "Provocation"
-  description:
+  description: "Enemies will target you until the end of turn"
   isGoodStatus: 1
   icon: "status_provocation"
 "6":
   name: "Invincible"
-  description:
+  description: "Negate incoming damage once"
   isGoodStatus: 1
   icon: "status_invincible"
 "7":
   name: "Good Luck"
-  description:
+  description: "Increase the activation rate of skill effects by 20%"
   isGoodStatus: 1
   icon: "status_lucky"
 "8":
   name: "Awakening"
-  description:
+  description: "Viewpoint required to use skills is halved"
   isGoodStatus: 1
   icon: "status_awakening"
 "9":
   name: "Resurrection"
-  description:
+  description: "Resurrect on death"
   isGoodStatus: 1
   icon: "status_reincanate"
 "10":
   name: "Regen"
-  description:
+  description: "Heals 10% of Maximum HP at the end of turn"
   isGoodStatus: 1
   icon: "status_regenerate"
 "11":
   name: "Attack Down"
-  description:
+  description: "Multiply attack power by 0.5"
   isGoodStatus: 0
   icon: "status_atkdown"
 "12":
   name: "Defense Down"
-  description:
+  description: "For one hit, multiply damage received by 1.5"
   isGoodStatus: 0
   icon: "status_defdown"
 "13":
   name: "Speed Down"
-  description:
+  description: "Decrease speed by 10"
   isGoodStatus: 0
   icon: "status_agidown"
 "14":
   name: "Mosaic"
-  description:
+  description: "Self view becomes 0"
   isGoodStatus: 0
   icon: "status_mosaic"
 "15":
   name: "Hide"
-  description:
+  description: "Won't be targeted by any enemy until the end of turn"
   isGoodStatus: 1
   icon: "status_hide"
 "16":
   name: "Bad Luck"
-  description:
+  description: "Reduce activation rate of skill effects by 20%"
   isGoodStatus: 0
   icon: "status_unlucky"
 "17":
   name: "Over-consumption"
-  description:
+  description: "Double the viewpoint cost of skills"
   isGoodStatus: 0
   icon: "status_useless"
 "18":
   name: "Poison"
-  description:
+  description: "Take 5% of maximum HP as damage at the end of turn"
   isGoodStatus: 0
   icon: "status_poison"
 "19":
   name: "Burn"
-  description:
+  description: "Take 10% of maximum HP as damage at the end of turn"
   isGoodStatus: 0
   icon: "status_flame"
 "20":
   name: "Super Speed Up"
-  description:
+  description: "Increase Speed by 30"
   isGoodStatus: 1
   icon: "status_superagiup"
 "21":
   name: "Debuff Immunity"
-  description:
+  description: "Reduce the chance of debuff being applied by 20%"
   isGoodStatus: 1
   icon: "status_immunity"
 "22":
   name: "Silence"
-  description:
+  description: "Prohibit the use of skills that cost viewpoint"
   isGoodStatus: 0
   icon: "status_silence"
 "23":
   name: "Burning Power"
-  description:
+  description: "The more HP is reduced, the more attack is increased"
   isGoodStatus: 1
   icon: "status_firepower"
 "24":
   name: "Wait"
-  description:
+  description: "Put yourself last in the current order of action"
   isGoodStatus: 1
   icon: "b_skill_wait"
 "25":
   name: "Agile"
-  description:
+  description: "Increase attack power based on speed difference from the opponent"
   isGoodStatus: 1
   icon: "status_speedatk"
 "26":
   name: "Damage aggregation"
-  description:
+  description: "Collect damage from area attack to self until the end of turn"
   isGoodStatus: 1
   icon: "status_damageAggregation"
 "27":
   name: "Persistent Effect"
-  description:
+  description: "Permanently activated until the end of battle"
   isGoodStatus: 1
   icon: "b_skill_special"
 "28":
   name: "Event Bonus"
-  description:
+  description: "Effects triggered by event"
   isGoodStatus: 1
   icon: "b_skill_special"
 "29":
   name: "Super Speed Down"
-  description:
+  description: "Decrease speed by 30"
   isGoodStatus: 0
   icon: "status_superagidown"
 "30":
   name: "Item Effect"
-  description:
+  description: "Effects triggered by items"
   isGoodStatus: 1
   icon: ""
 "31":
   name: "Item Effect: HP Up"
-  description:
+  description: "HP increase with items"
   isGoodStatus: 1
   icon: ""
 "32":
   name: "Item Effect: Atk Up"
-  description:
+  description: "Atk increase with items"
   isGoodStatus: 1
   icon: ""
 "33":
   name: "Item Effect: Damage Reduction"
-  description:
+  description: "Reduce damage received with items"
   isGoodStatus: 1
   icon: ""
 "34":
   name: "Burst"
-  description:
+  description: "When taking damage, take additional 40% atk of the Burst status creator"
   isGoodStatus: 0
   icon: "status_burst"
 "35":
   name: "Tentacle"
-  description:
+  description: "Kaibutsu's Tentacle"
   isGoodStatus: 1
   icon: "b_skill_special"
 "36":
   name: "View Cost -3000"
-  description:
+  description: "Reduce view cost by 3000"
   isGoodStatus: 1
   icon: "status_burst"
 "37":
   name: "Bonus: Atk Up"
-  description:
+  description: "Attack increase by quest bonus"
   isGoodStatus: 1
   icon: "status_burst"
 "38":
   name: "View Cost -2000"
-  description:
+  description: "Reduce view cost by 2000"
   isGoodStatus: 1
   icon: "status_burst"
 "39":
   name: "View Cost +4000"
-  description:
+  description: "Increase view cost by 4000"
   isGoodStatus: 0
   icon: "status_burst"
 "40":
   name: "Behavioural Suspension"
-  description:
+  description: "Unable to act until the end of turn"
   isGoodStatus: 0
   icon: "status_burst"
 "41":
   name: "Attack Up (Small)"
-  description:
+  description: "Multiply attack power by 1.1"
   isGoodStatus: 0
   icon: ""
 "42": 
@@ -215,7 +215,7 @@
   icon: ""
 "44":
   name: "Debuff Resistance 100%"
-  description:
+  description: "Reduce the chance of debuff being applied by 100%"
   isGoodStatus: 1
   icon: "status_immunity"
 "45":
@@ -225,6 +225,6 @@
   icon: ""
 "46":
   name: "Debuff Resistance 100%"
-  description:
+  description: "Reduce the chance of debuff being applied by 100%"
   isGoodStatus: 1
   icon: "status_immunity"
