--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -20,7 +20,7 @@
   icon: "status_attention"
 "5":
   name: "Provocation"
-  description: "Enemies will target you until the end of turn"
+  description: "Enemies will be more likely to target you until the end of turn"
   isGoodStatus: 1
   icon: "status_provocation"
 "6":
@@ -70,7 +70,7 @@
   icon: "status_mosaic"
 "15":
   name: "Hide"
-  description: "Won't be targeted by any enemy until the end of turn"
+  description: "Enemies will be less likely to target you until the end of turn"
   isGoodStatus: 1
   icon: "status_hide"
 "16":
