--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -228,3 +228,43 @@
   description: "Reduce the chance of debuff being applied by 100%"
   isGoodStatus: 1
   icon: "status_immunity"
+"47":
+  name:
+  description:
+  isGoodStatus: 1
+  icon: ""
+"48":
+  name: "Void"
+  description: "Cannot be inflicted with certain debuff"
+  isGoodStatus: 1
+  icon: ""
+"49":
+  name: "Clock Up"
+  description: "Speed +5, decrease VP consumption by 2000, cannot be removed"
+  isGoodStatus: 1
+  icon: "b_skill_special"
+"50":
+  name: "Target"
+  description: "You will be more likely to be targeted by enemies until the end of turn"
+  isGoodStatus: 0
+  icon: "status_target"
+"51":
+  name: "View consumption -18000"
+  description: "Reduce view consumption by 18000"
+  isGoodStatus: 1
+  icon: "status_awakening"
+"52":
+  name: "Debuff Resistance 10%"
+  description: "Reduce the chance of debuff being applied by 10%"
+  isGoodStatus: 1
+  icon: "b_skill_buff"
+"53":
+  name: "Fanaticism"
+  description: "On release view +2000"
+  isGoodStatus: 1
+  icon: "b_skill_view"
+"54":
+  name: ""
+  description: ""
+  isGoodStatus: 2
+  icon: "status_awakening"
