--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -13,6 +13,10 @@
 3001104: Competitive Spirit IV
 3001105: Competitive Spirit V
 3001106: Competitive Spirit VI
+1001201: Bubble Ball
+1001202: Focused Pitch
+1001203: One-hundred Violent Strikes
+1001204: One-hundred Violent Strikes+
 # Mokdai
 1002101: Herculean Punch 
 1002102: Best Direction
@@ -297,6 +301,10 @@
 1019102: I AI EYESIGHT
 1019103: LOVE ME☆HITO-MIー!
 1019104: I AI EYESIGHT+
+1019201: Fight! Everlasting Summer MARMAID
+1019202: BUZZle・Bubble Hour
+1019203: LOVE ME☆HITO-MIー!
+1019204: LOVE ME☆HITO-MIー!+
 # Isaribi
 1022101: The Method of Pole Fishing
 1022102: Homing Cast Net
@@ -621,4 +629,31 @@
 3031104: Amorphous Form IV
 3031105: Amorphous Form V
 3031106: Amorphous Form VI
-
+# Hydoor
+1017101: Vieii Kýmata
+1017102: Ydromasáz Silotas
+1017103: Okeanós tou Drákos
+1017104: Okeanós tou Drákos
+2017101: Ruffian of the Old Sea
+2017102: Ruffian of the Old Sea+
+2017103: Ruffian of the Old Sea++
+3017101: Hunting Swimming Style I
+3017102: Hunting Swimming Style II
+3017103: Hunting Swimming Style III
+3017104: Hunting Swimming Style IV
+3017105: Hunting Swimming Style V
+3017106: Hunting Swimming Style VI
+# Pubraseer
+1073101: Metéoro Kidemónas
+1073102: évología Komíti
+1073103: Pénte Anamniseis
+1073104: Pénte Anamniseis
+2073101: Easygoing Sailor
+2073102: Easygoing Sailor+
+2073103: Easygoing Sailor++
+3073101: Innocent Hero I
+3073102: Innocent Hero II
+3073103: Innocent Hero III
+3073104: Innocent Hero IV
+3073105: Innocent Hero V
+3073106: Innocent Hero VI
