--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -260,11 +260,22 @@
   icon: "b_skill_buff"
 "53":
   name: "Fanaticism"
-  description: "On release view +2000"
+  description: "Activated by a special skill. Neither a buff nor a debuff."
   isGoodStatus: 1
-  icon: "b_skill_view"
+  icon: "b_skill_special"
 "54":
   name: ""
   description: ""
   isGoodStatus: 2
   icon: "status_awakening"
+"55":
+  name: "View Reduction"
+  description: "View base value is halved"
+  isGoodStatus: 0
+  icon: "status_mosaic"
+"56":
+  name: "Oxygen Cylinder"
+  description: "An item that replenishes oxygen in the ocean. Damage received by hero will also damage it."
+  isGoodStatus: 1
+  icon: "status_reincanate"
+ 
