--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -17,6 +17,7 @@
 1001202: Focused Pitch
 1001203: One-hundred Violent Strikes
 1001204: One-hundred Violent Strikes+
+8001102: Bubble Ball
 # Mokdai
 1002101: Herculean Punch 
 1002102: Best Direction
@@ -305,6 +306,7 @@
 1019202: BUZZle・Bubble Hour
 1019203: LOVE ME☆HITO-MIー!
 1019204: LOVE ME☆HITO-MIー!+
+8019201: LOVE ME☆HITO-MIー!+
 # Isaribi
 1022101: The Method of Pole Fishing
 1022102: Homing Cast Net
