--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -278,4 +278,18 @@
   description: "An item that replenishes oxygen in the ocean. Damage received by hero will also damage it."
   isGoodStatus: 1
   icon: "status_reincanate"
- 
+"57":
+  name: ""
+  description: ""
+  isGoodStatus: 2
+  icon: ""
+"58":
+  name: "View Cost +1000"
+  description: "Increase view cost by 1000"
+  isGoodStatus: 0
+  icon: "status_mosaic" 
+"59":
+  name: "Debuff Resistance"
+  description: "Reduce the chance of debuff being inflicted"
+  isGoodStatus: 1
+  icon: "status_immunity" 
