--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -293,3 +293,33 @@
   description: "Reduce the chance of debuff being inflicted"
   isGoodStatus: 1
   icon: "status_immunity" 
+"60":
+  name: ""
+  description: "Limited Victom Special Effect"
+  isGoodStatus: 2
+  icon: "" 
+"61":
+  name: "Decrease View Cost"
+  description: "Reduce the amount if view consumed. Cannot be removed"
+  isGoodStatus: 1
+  icon: "status_awakening" 
+"62":
+  name: "Increase View Cost"
+  description: "Increase the amount if view consumed. Cannot be removed"
+  isGoodStatus: 0
+  icon: "status_useless" 
+"63":
+  name: "Decrease View Cost"
+  description: "Reduce the amount if view consumed. Cannot be removed"
+  isGoodStatus: 0
+  icon: "status_awakening" 
+"64":
+  name: ""
+  description: ""
+  isGoodStatus: 0
+  icon: "status_awakening" 
+"65":
+  name: ""
+  description: ""
+  isGoodStatus: 0
+  icon: "status_immunity" 
