SkillnameTL [ci skip]

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -194,6 +194,10 @@
 3009104: Indomitable Ranger IV
 3009105: Indomitable Ranger V
 3009106: Indomitable Ranger VI
+1009201: Eddy Wall
+1009202: Technical Riding
+1009203: Lightspeed Phoenix
+1009204: Eddy Wall+
 # Digram
 1024101: Departure Procedure
 1024102: Energy Replenishing
@@ -399,6 +403,10 @@
 3007104: Next Round Loaded IV
 3007105: Next Round Loaded V
 3007106: Next Round Loaded VI
+1007201: Chill You Out!
+1007202: Sopping Wet!
+1007203: BANG&BANG&BANG!!
+1007204: Sopping Wet!+
 # Nessen
 1051101: Source Style Blade
 1051102: Super-heating Flash
@@ -659,5 +667,19 @@
 3073104: Innocent Hero IV
 3073105: Innocent Hero V
 3073106: Innocent Hero VI
+# Okitaka
+1075101: Circumstance Strategy
+1075102: Mighty Warrior Stratagem
+1075103: Situation Edge
+1075104: Mighty Warrior Stratagem+
+2075101: Order of The Wise General
+2075102: Order of The Wise General+
+2075103: Order of The Wise General++
+3075101: Logistic Support I
+3075102: Logistic Support II
+3075103: Logistic Support III
+3075104: Logistic Support IV
+3075105: Logistic Support V
+3075106: Logistic Support VI
 #Passive
 6030104: I am water
