--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -323,3 +323,23 @@
   description: ""
   isGoodStatus: 0
   icon: "status_immunity" 
+"66":
+  name: ""
+  description: "Okitaka Special Effect"
+  isGoodStatus: 2
+  icon: "status_atkup" 
+"67":
+  name: ""
+  description: "Limited Victom Special Effect2"
+  isGoodStatus: 2
+  icon: "b_skill_special" 
+"68":
+  name: ""
+  description: "Okitaka Special Effect for skill1"
+  isGoodStatus: 2
+  icon: "" 
+"69":
+  name: ""
+  description: "Limited Victom Special Effect ViewMultiAttack Condition (Quest)"
+  isGoodStatus: 2
+  icon: "" 
