Status [ci skip]

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -327,7 +327,7 @@
   name: ""
   description: "Okitaka Special Effect"
   isGoodStatus: 2
-  icon: "status_atkup" 
+  icon: "" 
 "67":
   name: ""
   description: "Limited Victom Special Effect2"
