Skill name TL [ci skip]

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -404,9 +404,9 @@
 3007105: Next Round Loaded V
 3007106: Next Round Loaded VI
 1007201: Chill You Out!
-1007202: Sopping Wet!
+1007202: Soak You Wet!
 1007203: BANG&BANG&BANG!!
-1007204: Sopping Wet!+
+1007204: Soak You Wet!+
 # Nessen
 1051101: Source Style Blade
 1051102: Super-heating Flash
