--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -300,17 +300,17 @@
   icon: "" 
 "61":
   name: "Decrease View Cost"
-  description: "Reduce the amount if view consumed. Cannot be removed"
+  description: "Reduce the amount of view consumed. Cannot be removed"
   isGoodStatus: 1
   icon: "status_awakening" 
 "62":
   name: "Increase View Cost"
-  description: "Increase the amount if view consumed. Cannot be removed"
+  description: "Increase the amount of view consumed. Cannot be removed"
   isGoodStatus: 0
   icon: "status_useless" 
 "63":
   name: "Decrease View Cost"
-  description: "Reduce the amount if view consumed. Cannot be removed"
+  description: "Reduce the amount of view consumed. Cannot be removed"
   isGoodStatus: 0
   icon: "status_awakening" 
 "64":
@@ -324,8 +324,8 @@
   isGoodStatus: 0
   icon: "status_immunity" 
 "66":
-  name: ""
-  description: "Okitaka Special Effect"
+  name: "Okitaka Special"
+  description: "Count based on the number of times this take effect, triggered for a maximum of 5 times "
   isGoodStatus: 2
   icon: "" 
 "67":
