--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -279,7 +279,7 @@
   isGoodStatus: 1
   icon: "status_reincanate"
 "57":
-  name: ""
+  name: "Stacking Effect"
   description: ""
   isGoodStatus: 2
   icon: ""
@@ -329,8 +329,8 @@
   isGoodStatus: 2
   icon: "" 
 "67":
-  name: ""
-  description: "Limited Victom Special Effect2"
+  name: "Victom Special"
+  description: "Increase Atk proportional with current viewpoint amount"
   isGoodStatus: 2
   icon: "b_skill_special" 
 "68":
