--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -330,9 +330,9 @@
   icon: "" 
 "67":
   name: "Victom Special"
-  description: "Increase Atk proportional with current viewpoint amount"
+  description: "Increase Atk by 0.5% for every 1000 current viewpoint for a maximum of 50%"
   isGoodStatus: 2
-  icon: "b_skill_special" 
+  icon: "" 
 "68":
   name: ""
   description: "Okitaka Special Effect for skill1"
