--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -343,3 +343,24 @@
   description: "Limited Victom Special Effect ViewMultiAttack Condition (Quest)"
   isGoodStatus: 2
   icon: "" 
+"70":
+  name: "Cap damage at 3000"
+  description: "Damage received is capped at 3000"
+  isGoodStatus: 2
+  icon: "b_skill_special"
+"71":
+  name: "Cap damage at 5000"
+  description: "Damage received is capped at 5000"
+  isGoodStatus: 2
+  icon: "b_skill_special"
+"72":
+  name: "Cap damage at 10000"
+  description: "Damage received is capped at 10000"
+  isGoodStatus: 2
+  icon: "b_skill_special" 
+"73":
+  name: "Cap damage at 20000"
+  description: "Damage received is capped at 20000"
+  isGoodStatus: 2
+  icon: "b_skill_special" 
+  
