--- a/_data/wiki/UITranslation.yml
+++ b/_data/wiki/UITranslation.yml
@@ -12,3 +12,5 @@ UI_SCORE_ATTACK_SURVIVAL_COUNT_DESCRIPTION: The amount of surviving ally
 UI_SCORE_ATTACK_SURVIVAL_COUNT_LABEL: Survival Bonus
 UI_SCORE_ATTACK_TURN_BONUS_DESCRIPTION: Number of turns until cleared
 UI_SCORE_ATTACK_TURN_BONUS_LABEL: Turn Bonus
+UI_SCORE_ATTACK_TOTAL_HP_SCORE_DESCRIPTION: Total damage dealt to enemies
+UI_SCORE_ATTACK_TOTAL_HP_SCORE_LABEL: Damage Bonus
