Standardize system status description a bit

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -260,7 +260,7 @@
   icon: "b_skill_buff"
 "53":
   name: "Fanaticism"
-  description: "Activated by a special skill. Neither a buff nor a debuff."
+  description: "System status with no effect on its own. Certain skill will trigger depending on the number of this status"
   isGoodStatus: 1
   icon: "b_skill_special"
 "54":
@@ -280,7 +280,7 @@
   icon: "status_reincanate"
 "57":
   name: "Stacking Effect"
-  description: ""
+  description: "System status with no effect on its own. Certain skill will trigger depending on the number of this status"
   isGoodStatus: 2
   icon: ""
 "58":
