--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -324,7 +324,7 @@
   isGoodStatus: 0
   icon: "status_immunity" 
 "66":
-  name: "Okitaka Special"
+  name: "Okitaka Special (Sidekick)"
   description: "Count based on the number of times this take effect, triggered for a maximum of 5 times "
   isGoodStatus: 2
   icon: "" 
@@ -334,7 +334,7 @@
   isGoodStatus: 2
   icon: "" 
 "68":
-  name: ""
+  name: "Okitaka Special (Hero)"
   description: "Okitaka Special Effect for skill1"
   isGoodStatus: 2
   icon: "" 
