--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -363,4 +363,9 @@
   description: "Damage received is capped at 20000"
   isGoodStatus: 2
   icon: "b_skill_special" 
+"75":
+  name: "Atk Up (Small)"
+  description: "Increase Atk by 1.3 times"
+  isGoodStatus: 1
+  icon: "status_atkup" 
   
