--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -439,6 +439,7 @@
 1043101: Slash
 1043102: Poison Stab
 1043103: Wood Wolf's Spirit
+1043104: Wood Wolf's Spirit+
 2043101: Backing Slash
 2043102: Backing Slash+
 2043103: Backing Slash++
@@ -522,6 +523,7 @@
 1045101: Slash
 1045102: Poison Stab
 1045103: Shadow Wolf's Spirit
+1045104: Shadow Wolf's Spirit+
 2045101: Backing Slash
 2045102: Backing Slash+
 2045103: Backing Slash++
@@ -681,6 +683,76 @@
 3075104: Logistic Support IV
 3075105: Logistic Support V
 3075106: Logistic Support VI
+# Fire Mercenary
+1066101: Open Fire
+1066102: Backup Request
+1066103: Volley Fire
+1066104: Volley Fire+
+2066101: Action Preparation
+2066102: Action Preparation+
+2066103: Action Preparation++
+3066101: Fire Mercenary's Provision I
+3066102: Fire Mercenary's Provision II
+3066103: Fire Mercenary's Provision III
+3066104: Fire Mercenary's Provision IV
+3066105: Fire Mercenary's Provision V
+3066106: Fire Mercenary's Provision VI
+# Water Mercenary
+1067101: Open Fire
+1067102: Backup Request
+1067103: Volley Fire
+1067104: Volley Fire+
+2067101: Action Preparation
+2067102: Action Preparation+
+2067103: Action Preparation++
+3067101: Water Mercenary's Provision I
+3067102: Water Mercenary's Provision II
+3067103: Water Mercenary's Provision III
+3067104: Water Mercenary's Provision IV
+3067105: Water Mercenary's Provision V
+3067106: Water Mercenary's Provision VI
+# Wood Mercenary
+1068101: Open Fire
+1068102: Backup Request
+1068103: Volley Fire
+1068104: Volley Fire+
+2068101: Action Preparation
+2068102: Action Preparation+
+2068103: Action Preparation++
+3068101: Wood Mercenary's Provision I
+3068102: Wood Mercenary's Provision II
+3068103: Wood Mercenary's Provision III
+3068104: Wood Mercenary's Provision IV
+3068105: Wood Mercenary's Provision V
+3068106: Wood Mercenary's Provision VI
+# Light Mercenary
+1069101: Open Fire
+1069102: Backup Request
+1069103: Volley Fire
+1069104: Volley Fire+
+2069101: Action Preparation
+2069102: Action Preparation+
+2069103: Action Preparation++
+3069101: Light Mercenary's Provision I
+3069102: Light Mercenary's Provision II
+3069103: Light Mercenary's Provision III
+3069104: Light Mercenary's Provision IV
+3069105: Light Mercenary's Provision V
+3069106: Light Mercenary's Provision VI
+# Shadow Mercenary
+1070101: Open Fire
+1070102: Backup Request
+1070103: Volley Fire
+1070104: Volley Fire+
+2070101: Action Preparation
+2070102: Action Preparation+
+2070103: Action Preparation++
+3070101: Shadow Mercenary's Provision I
+3070102: Shadow Mercenary's Provision II
+3070103: Shadow Mercenary's Provision III
+3070104: Shadow Mercenary's Provision IV
+3070105: Shadow Mercenary's Provision V
+3070106: Shadow Mercenary's Provision VI
 #Passive
 6030104: I am water
 6051102: Fire element
