Add pages and update plugin

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -368,4 +368,8 @@
   description: "Increase Atk by 1.3 times"
   isGoodStatus: 1
   icon: "status_atkup" 
-  
+"78":
+  name: "Berserk"
+  description: "Increase Atk by 2 times. Reduce 15% of self max HP at end of turn. Force auto action"
+  isGoodStatus: 1
+  icon: "status_berserk"
