--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -283,6 +283,10 @@
 3999105: Unconscious Assist V
 3999106: Unconscious Assist VI
 # Huckle
+1034101: The Great Step
+1034102: Escape From Cage
+1034103: Sonic Boom Penetration
+1034104: The Great Step+
 2034101: Former Hero's Experience
 2034102: Former Hero's Experience+
 2034103: Former Hero's Experience++
@@ -753,6 +757,30 @@
 3070104: Shadow Mercenary's Provision IV
 3070105: Shadow Mercenary's Provision V
 3070106: Shadow Mercenary's Provision VI
+# Exio
+2035101: The Point of Awakening
+2035102: The Point of Awakening+
+2035103: The Point of Awakening++
+3035101: Forceful Expansion of Connection Path I
+3035102: Forceful Expansion of Connection Path II
+3035103: Forceful Expansion of Connection Path III
+3035104: Forceful Expansion of Connection Path IV
+3035105: Forceful Expansion of Connection Path V
+3035106: Forceful Expansion of Connection Path VI
+# Sadayoshi
+1081101: Tactical Martial Arts
+1081102: Diversion Command
+1081103: Evil Crushing Brilliant Fist
+1081104: Diversion Command+
+2081101: Supporting Fist
+2081102: Supporting Fist+
+2081103: Supporting Fist++
+3081101: Spirit of Loyalty I
+3081102: Spirit of Loyalty II
+3081103: Spirit of Loyalty III
+3081104: Spirit of Loyalty IV
+3081105: Spirit of Loyalty V
+3081106: Spirit of Loyalty VI
 #Passive
 6030104: I am water
 6051102: Fire element
