--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -781,6 +781,7 @@
 3081104: Spirit of Loyalty IV
 3081105: Spirit of Loyalty V
 3081106: Spirit of Loyalty VI
+8081101: Tactical Martial Arts
 #Passive
 6030104: I am water
 6051102: Fire element
