Update Status [ci skip]

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -373,3 +373,8 @@
   description: "Increase Atk by 2 times. Reduce 15% of self max HP at end of turn. Force auto action"
   isGoodStatus: 1
   icon: "status_berserk"
+"82":
+  name: "Concert"
+  description: "Double the number of Views earned by View acquisition skill."
+  isGoodStatus: 1
+  icon: "status_concert"
