--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -32,6 +32,10 @@
 3002104: Skillful Camera Work IV
 3002105: Skillful Camera Work V
 3002106: Skillful Camera Work VI
+1002201: Festive Gift
+1002202: Best Wishes
+1002203: Megaton Slider
+1002204: Best Wishes+
 # Crowne
 1005101: Machine Crack
 1005102: Arms Repairment
@@ -120,6 +124,10 @@
 3029104: Today's Highlight Ⅳ
 3029105: Today's Highlight Ⅴ
 3029106: Today's Highlight Ⅵ
+1029201: Comet Blaster
+1029202: Holy Cannon
+1029203: Memorial Heroes
+1029204: Memorial Heroes+
 # Polaris Mask
 1015101: Glittering Stars Back-Breaker
 1015102: Mic Performance
@@ -782,6 +790,20 @@
 3081105: Spirit of Loyalty V
 3081106: Spirit of Loyalty VI
 8081101: Tactical Martial Arts
+# Borealis
+1082101: Cicto Cantus
+1082102: Stellaris Elegia
+1082103: Grandiorocqua
+1082104: Cicto Cantus+
+2082101: Melody of Inspiration
+2082102: Melody of Inspiration+
+2082103: Melody of Inspiration++
+3082101: Audience's Applause I
+3082102: Audience's Applause II
+3082103: Audience's Applause III
+3082104: Audience's Applause IV
+3082105: Audience's Applause V
+3082106: Audience's Applause VI
 #Passive
 6030104: I am water
 6051102: Fire element
