--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -15,8 +15,8 @@
 3001106: Competitive Spirit VI
 1001201: Bubble Ball
 1001202: Focused Pitch
-1001203: One-hundred Violent Strikes
-1001204: One-hundred Violent Strikes+
+1001203: One-hundred Violent Pitches
+1001204: One-hundred Violent Pitches+
 8001102: Bubble Ball
 # Mokdai
 1002101: Herculean Punch 
