--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -791,10 +791,10 @@
 3081106: Spirit of Loyalty VI
 8081101: Tactical Martial Arts
 # Borealis
-1082101: Cicto Cantus
+1082101: Sixto Cantus
 1082102: Stellaris Elegia
-1082103: Grandiorocqua
-1082104: Cicto Cantus+
+1082103: Grandioloqua
+1082104: Sixto Cantus+
 2082101: Melody of Inspiration
 2082102: Melody of Inspiration+
 2082103: Melody of Inspiration++
