--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -375,6 +375,6 @@
   icon: "status_berserk"
 "82":
   name: "Concert"
-  description: "Double the number of Views earned by View acquisition skill."
+  description: "Increase number of Views earned by View acquisition skill by 1.5 times"
   isGoodStatus: 1
   icon: "status_concert"
