--- a/_data/wiki/UITranslation.yml
+++ b/_data/wiki/UITranslation.yml
@@ -1,7 +1,9 @@
 UI_SCORE_ATTACK_BONUS_ATK10UP: ATK +10%
 UI_SCORE_ATTACK_BONUS_ATK20UP: ATK +20%
 UI_SCORE_ATTACK_BONUS_ATK30UP: ATK +30%
+UI_SCORE_ATTACK_BONUS_ATK40UP: ATK +40%
 UI_SCORE_ATTACK_BONUS_ATK50UP: ATK +50%
+UI_SCORE_ATTACK_BONUS_ATK60UP: ATK +60%
 UI_SCORE_ATTACK_CLEAR_BONUS_DESCRIPTION: Bonus for quest completion
 UI_SCORE_ATTACK_CLEAR_BONUS_LABEL: Clear Bonus
 UI_SCORE_ATTACK_ELAPSE_TURN_BONUS_DESCRIPTION: Survive for how many turns
