--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -376,5 +376,26 @@
 "82":
   name: "Concert"
   description: "Increase number of Views earned by View acquisition skill by 1.5 times"
-  isGoodStatus: 1
+  isGoodStatus: 2
   icon: "status_concert"
+"84":
+  name: "Critical"
+  description: "Critical Effect"
+  isGoodStatus: 2
+  icon: ""
+"85":
+  name: "Reduction"
+  description: "Reduction Effect"
+  isGoodStatus: 2
+  icon: ""
+"86":
+  name: "Vulpecula Special"
+  description: "Works as a number counter so that Vulpecula doesn't use his skill till the enemy is dead"
+  isGoodStatus: 2
+  icon: ""
+"87":
+  name: "Furlong Evasion"
+  description: "Furlong Evasion"
+  isGoodStatus: 2
+  icon: ""
+  
